<resources>
    <string name="app_name">RoomExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">product name</string>
    <string name="product_id">product ID</string>
    <string name="product_quantity">product quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="not_assigned">not assigned</string>
</resources>